k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: fitness-challenge
  name: persistence-app-svc
  labels:
    app: persistence-fitness-challenge
spec:
  type: ClusterIP
  selector:
    app: persistence-fitness-challenge
  ports:
    -  protocol: TCP
       port: 8080
       targetPort: 8080
